func qvalue